examples/kustomize/k8s_argo_rollout/base/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: cci-kustomize-rollout-demo
  annotations:
    # optional fields to track the deployment triggers in the dashboard
    # you need all 3 to effectively display the deployment trigger in the UI
    circleci.com/pipeline-id: placeholder
    circleci.com/workflow-id: placeholder
    circleci.com/job-number: placeholder
    # mandatory field, with this CircleCI can safely start tracking his component and make sure that only people authorized to use
    # this project can do operations over it on the CircleCI release dashboard like rollback, scale, restart. etc.
    # project ID maps with the git repository linked
    circleci.com/project-id: placeholder
  labels:
    # mandatory labels for CircleCI k8s release agent to identify the component and start tracking events
    #
    # you can also use common `app`` and `version` labels
    # app: cci-kustomize-rollout-demo
    # version: ${VERSION}
    circleci.com/component-name: cci-kustomize-rollout-demo
    circleci.com/version: placeholder
spec:
  replicas: 2
  revisionHistoryLimit: 5
  rollbackWindow:
    revisions: 3
  strategy:
    canary:
      steps:
      - setWeight: 15
      - pause: {duration: "5m"}
      - setWeight: 50
      - pause: {duration: "5m"}
      - setWeight: 100
      - pause: {duration: "5m"}
  selector:
    matchLabels:
      circleci.com/component-name: cci-kustomize-rollout-demo
  template:
    metadata:
      labels:
        # it is important to place these labels here as well so they 
        # can be propagated to child objects like replicasets and pods
        # remeber you can also use common `app` and `version` labels here.
        circleci.com/component-name: cci-kustomize-rollout-demo
        circleci.com/version: placeholder
    spec:
      containers:
        - image: argoproj/rollouts-demo:placeholder
          imagePullPolicy: Always
          name: color-demo
