examples/kustomize/k8s_argo_rollout/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cci-kustomize-rollout-demo
  labels:
    circleci.com/component-name: cci-kustomize-rollout-demo
spec:
  ingressClassName: nginx
  rules:
    # host: domain.foo.org add a host if you want to test
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cci-kustomize-rollout-demo
            port:
              number: 80
